[feature] Adds in memory cache for query results
- Use in memory caching for resuls smaller 4 MB adding new
  CachedContentFile and companion test case
- Extended XmlRpcTest to improve coverage of RpcConnection
- Added new QueryResultCacheTest

Signed-off-by: Patrick Reinhart <patrick@reini.net>