@@ -21,20 +21,25 @@
  */
 package org.exist.xmlrpc;
 
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
+
 import org.apache.xmlrpc.XmlRpcException;
 import org.apache.xmlrpc.client.XmlRpcClient;
 import org.apache.xmlrpc.client.XmlRpcClientConfigImpl;
+import org.exist.Version;
 import org.exist.security.MessageDigester;
 import org.exist.storage.serializers.EXistOutputKeys;
 import org.exist.test.ExistWebServer;
 import org.exist.test.TestConstants;
 import org.exist.util.Compressor;
 import org.exist.util.MimeType;
-import org.apache.commons.io.input.UnsynchronizedByteArrayInputStream;
-import org.apache.commons.io.output.UnsynchronizedByteArrayOutputStream;
+import org.apache.commons.io.output.ByteArrayOutputStream;
 import org.exist.xmldb.XmldbURI;
 
+import static java.lang.Boolean.FALSE;
+import static java.lang.Boolean.TRUE;
+import static org.exist.test.TestConstants.TEST_XML_URI;
 import static org.exist.xmldb.RemoteCollection.MAX_UPLOAD_CHUNK;
 import static org.exist.xmlrpc.RpcConnection.MAX_DOWNLOAD_CHUNK_SIZE;
 
@@ -47,12 +52,18 @@ import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+
 import org.exist.security.Permission;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.*;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Random;
 
 import org.junit.After;
 import org.xml.sax.SAXException;
@@ -74,7 +85,7 @@ public class XmlRpcTest {
 
     private final static XmldbURI TARGET_COLLECTION = XmldbURI.ROOT_COLLECTION_URI.append("xmlrpc");
 
-    private final static XmldbURI TARGET_RESOURCE = TARGET_COLLECTION.append(TestConstants.TEST_XML_URI);
+    private final static XmldbURI TARGET_RESOURCE = TARGET_COLLECTION.append(TEST_XML_URI);
 
     public final static XmldbURI MODULE_RESOURCE = TARGET_COLLECTION.append(TestConstants.TEST_MODULE_URI);
 
@@ -116,58 +127,69 @@ public class XmlRpcTest {
     @After
     public void tearDown() throws XmlRpcException, MalformedURLException {
         XmlRpcClient xmlrpc = getClient();
-        List<String> params = new ArrayList<>(1);
-        params.add(TARGET_COLLECTION.toString());
-        @SuppressWarnings("unused")
-        Boolean b = (Boolean) xmlrpc.execute("removeCollection", params);
+        assertThat(xmlrpc.execute("removeCollection", List.of(TARGET_COLLECTION.toString()))).isInstanceOf(Boolean.class);
     }
 
     @Test
     public void testStoreAndRetrieve() throws XmlRpcException, IOException {
-        XmlRpcClient xmlrpc = getClient();
-        List<Object> params = new ArrayList<>();
-        params.add(TARGET_COLLECTION.toString());
-        Boolean result = (Boolean) xmlrpc.execute("createCollection", params);
-        assertTrue(result);
+        XmlRpcClient xmlrpc = createCollection(TARGET_COLLECTION);
 
-        params.clear();
+        List<Object> params = new ArrayList<>();
         params.add(XML_DATA);
         params.add(TARGET_RESOURCE.toString());
+        params.add(0);
+
+        assertThat(xmlrpc.execute("parse", params)).isEqualTo(TRUE);
+
+        params.clear();
+        params.add(XML_DATA.getBytes());
+        params.add(TARGET_RESOURCE.toString());
+        params.add("application/xml");
         params.add(1);
 
-        result = (Boolean) xmlrpc.execute("parse", params);
-        assertTrue(result);
+        assertThat(xmlrpc.execute("parse", params)).isEqualTo(TRUE);
 
-        Map<String, String> options = new HashMap<>();
+        params.clear();
+        params.add(XML_DATA.getBytes());
+        params.add(TARGET_RESOURCE.toString());
+        params.add(1);
+        params.add(new Date(10_0000));
+        params.add(new Date(20_0000));
+
+        assertThat(xmlrpc.execute("parse", params)).isEqualTo(TRUE);
+
         params.clear();
         params.add(TARGET_RESOURCE.toString());
-        params.add(options);
+        params.add(Map.of());
 
-        byte[] data = (byte[]) xmlrpc.execute("getDocument", params);
-        assertNotNull(data);
+        assertThat((byte[])xmlrpc.execute("getDocument", params)).isNotEmpty();
 
         params.clear();
         params.add(TARGET_RESOURCE.toString());
         params.add(StandardCharsets.UTF_8.name());
         params.add(0);
 
-        data = (byte[]) xmlrpc.execute("getDocument", params);
-        assertNotNull(data);
+        assertThat((byte[])xmlrpc.execute("getDocument", params)).isNotEmpty();
 
+        params.clear();
+        params.add(TARGET_RESOURCE.toString());
+        params.add(Map.of(EXistOutputKeys.COMPRESS_OUTPUT, "yes"));
+
+        assertThat((byte[])xmlrpc.execute("getDocument", params)).isNotEmpty();
         params.clear();
         params.add(TARGET_RESOURCE.toString());
         params.add(0);
-        String sdata = (String) xmlrpc.execute("getDocumentAsString", params);
-        assertNotNull(data);
+
+        assertThat(xmlrpc.execute("getDocumentAsString", params)).isInstanceOf(String.class);
 
         params.clear();
         params.add(TARGET_RESOURCE.toString());
-        params.add(options);
+        params.add(Map.of());
         Map table = (Map) xmlrpc.execute("getDocumentData", params);
 
-        try (final UnsynchronizedByteArrayOutputStream os = new UnsynchronizedByteArrayOutputStream()) {
+        try (final ByteArrayOutputStream os = new ByteArrayOutputStream()) {
             int offset = (int) table.get("offset");
-            data = (byte[]) table.get("data");
+            byte[] data = (byte[]) table.get("data");
             os.write(data);
             while (offset > 0) {
                 params.clear();
@@ -179,58 +201,53 @@ public class XmlRpcTest {
                 os.write(data);
             }
             data = os.toByteArray();
-            assertTrue(data.length > 0);
+            assertThat(data).isNotEmpty();
         }
 
         params.clear();
         params.add(TARGET_RESOURCE.toString());
-        Boolean b = (Boolean) xmlrpc.execute("hasDocument", params);
-        assertTrue(b);
+        assertThat(xmlrpc.execute("hasDocument", params)).isEqualTo(TRUE);
     }
 
-    private void storeData() throws XmlRpcException, MalformedURLException {
+    private XmlRpcClient createCollection(XmldbURI collection) throws XmlRpcException, MalformedURLException {
         XmlRpcClient xmlrpc = getClient();
-        List<Object> params = new ArrayList<>();
-        params.add(TARGET_COLLECTION.toString());
-        Boolean result = (Boolean) xmlrpc.execute("createCollection", params);
-        assertTrue(result);
+        assertThat(xmlrpc.execute("createCollection", List.of(collection.toString()))).isEqualTo(TRUE);
+        return xmlrpc;
+    }
 
-        params.clear();
+    private XmlRpcClient storeData() throws XmlRpcException, MalformedURLException {
+        XmlRpcClient xmlrpc = createCollection(TARGET_COLLECTION);
+
+        List<Object> params = new ArrayList<>();
         params.add(XML_DATA);
         params.add(TARGET_RESOURCE.toString());
         params.add(1);
 
-        result = (Boolean) xmlrpc.execute("parse", params);
-        assertTrue(result);
+        assertThat(xmlrpc.execute("parse", params)).isEqualTo(TRUE);
 
         params.set(0, XSL_DATA);
         params.set(1, TARGET_COLLECTION.append("test.xsl").toString());
-        result = (Boolean) xmlrpc.execute("parse", params);
-        assertTrue(result);
+        assertThat(xmlrpc.execute("parse", params)).isEqualTo(TRUE);
 
         params.set(0, MODULE_DATA.getBytes(UTF_8));
         params.set(1, MODULE_RESOURCE.toString());
         params.set(2, MimeType.XQUERY_TYPE.getName());
-        params.add(Boolean.TRUE);
-        result = (Boolean) xmlrpc.execute("storeBinary", params);
-        assertTrue(result);
+        params.add(TRUE);
+        assertThat(xmlrpc.execute("storeBinary", params)).isEqualTo(TRUE);
+
+        return xmlrpc;
     }
 
     @Test
     public void getDocumentDataChunked_nextChunk() throws IOException, XmlRpcException {
-        final XmlRpcClient xmlrpc = getClient();
-        List<Object> params = new ArrayList<>();
-        params.add(TARGET_COLLECTION.toString());
-        Boolean result = (Boolean) xmlrpc.execute("createCollection", params);
-        assertTrue(result);
+        final XmlRpcClient xmlrpc = createCollection(TARGET_COLLECTION);
 
-        params.clear();
-        final String generatedXml = generateXml((int)(MAX_DOWNLOAD_CHUNK_SIZE * 1.5));
+        List<Object> params = new ArrayList<>();
+        final String generatedXml = generateXml((int) (MAX_DOWNLOAD_CHUNK_SIZE * 1.5));
         params.add(generatedXml);
         params.add(TARGET_RESOURCE.toString());
         params.add(1);
-        result = (Boolean) xmlrpc.execute("parse", params);
-        assertTrue(result);
+        assertThat(xmlrpc.execute("parse", params)).isEqualTo(TRUE);
 
         params.clear();
         final Map<String, Object> parameters = new HashMap<>();
@@ -240,7 +257,7 @@ public class XmlRpcTest {
         params.add(parameters);
         Map table = (Map) xmlrpc.execute("getDocumentData", params);
 
-        try (final UnsynchronizedByteArrayOutputStream os = new UnsynchronizedByteArrayOutputStream()) {
+        try (final ByteArrayOutputStream os = new ByteArrayOutputStream()) {
             int offset = (int) table.get("offset");
             byte[] data = (byte[]) table.get("data");
             os.write(data);
@@ -249,30 +266,25 @@ public class XmlRpcTest {
                 params.add(table.get("handle"));
                 params.add(offset);
                 table = (Map<?, ?>) xmlrpc.execute("getNextChunk", params);
-                offset = (int)table.get("offset");
+                offset = (int) table.get("offset");
                 data = (byte[]) table.get("data");
                 os.write(data);
             }
             data = os.toByteArray();
-            assertEquals(generatedXml, new String(data));
+            assertThat(generatedXml).isEqualTo(new String(data));
         }
     }
 
     @Test
     public void getDocumentDataChunked_nextExtendedChunk() throws IOException, XmlRpcException {
-        final XmlRpcClient xmlrpc = getClient();
-        List<Object> params = new ArrayList<>();
-        params.add(TARGET_COLLECTION.toString());
-        Boolean result = (Boolean) xmlrpc.execute("createCollection", params);
-        assertTrue(result);
+        final XmlRpcClient xmlrpc = createCollection(TARGET_COLLECTION);
 
-        params.clear();
-        final String generatedXml = generateXml((int)(MAX_DOWNLOAD_CHUNK_SIZE * 1.75));
+        List<Object> params = new ArrayList<>();
+        final String generatedXml = generateXml((int) (MAX_DOWNLOAD_CHUNK_SIZE * 1.75));
         params.add(generatedXml);
         params.add(TARGET_RESOURCE.toString());
         params.add(1);
-        result = (Boolean) xmlrpc.execute("parse", params);
-        assertTrue(result);
+        assertThat(xmlrpc.execute("parse", params)).isEqualTo(TRUE);
 
         params.clear();
         final Map<String, Object> parameters = new HashMap<>();
@@ -282,7 +294,7 @@ public class XmlRpcTest {
         params.add(parameters);
         Map table = (Map) xmlrpc.execute("getDocumentData", params);
 
-        try (final UnsynchronizedByteArrayOutputStream os = new UnsynchronizedByteArrayOutputStream()) {
+        try (final ByteArrayOutputStream os = new ByteArrayOutputStream()) {
             long offset = (int) table.get("offset");
             byte[] data = (byte[]) table.get("data");
             os.write(data);
@@ -296,7 +308,7 @@ public class XmlRpcTest {
                 os.write(data);
             }
             data = os.toByteArray();
-            assertEquals(generatedXml, new String(data));
+            assertThat(generatedXml).isEqualTo(new String(data));
         }
     }
 
@@ -305,11 +317,11 @@ public class XmlRpcTest {
         final XmlRpcClient xmlrpc = getClient();
         final String resURI = XmldbURI.ROOT_COLLECTION_URI.append("test.bin").toString();
         final Date now = new Date(System.currentTimeMillis());
-        final byte[] binary = generateBinary((int)(MAX_UPLOAD_CHUNK * 1.5));
+        final byte[] binary = generateBinary((int) (MAX_UPLOAD_CHUNK * 1.5));
 
         // 1) upload
         String uploadedFileName = null;
-        try (final InputStream is = new UnsynchronizedByteArrayInputStream(binary)) {
+        try (final InputStream is = new ByteArrayInputStream(binary)) {
             final byte[] chunk = new byte[MAX_UPLOAD_CHUNK];
             int len;
             while ((len = is.read(chunk)) > -1) {
@@ -328,9 +340,9 @@ public class XmlRpcTest {
         final List<Object> paramsEx = new ArrayList<>();
         paramsEx.add(uploadedFileName);
         paramsEx.add(resURI);
-        paramsEx.add(Boolean.TRUE);
+        paramsEx.add(TRUE);
         paramsEx.add("application/octet-stream");
-        paramsEx.add(Boolean.FALSE);
+        paramsEx.add(FALSE);
         paramsEx.add(now);
         paramsEx.add(now);
         xmlrpc.execute("parseLocalExt", paramsEx);
@@ -339,9 +351,9 @@ public class XmlRpcTest {
         // 2) download
         final List<Object> params = new ArrayList<>();
         params.add(resURI);
-        params.add(Collections.emptyMap());
+        params.add(Map.of());
         Map table = (Map) xmlrpc.execute("getDocumentData", params);
-        try (final UnsynchronizedByteArrayOutputStream os = new UnsynchronizedByteArrayOutputStream()) {
+        try (final ByteArrayOutputStream os = new ByteArrayOutputStream()) {
             long offset = (int) table.get("offset");
             byte[] data = (byte[]) table.get("data");
             os.write(data);
@@ -356,46 +368,36 @@ public class XmlRpcTest {
             }
 
             data = os.toByteArray();
-            assertArrayEquals(binary, data);
+            assertThat(binary).isEqualTo(data);
         }
     }
 
     @Test
     public void testRemoveCollection() throws XmlRpcException, MalformedURLException {
-        storeData();
-        XmlRpcClient xmlrpc = getClient();
+        final XmlRpcClient xmlrpc = storeData();
+
         List params = new ArrayList(1);
         params.add(TARGET_COLLECTION.toString());
-        Boolean b = (Boolean) xmlrpc.execute("hasCollection", params);
-        assertTrue(b);
-
-        b = (Boolean) xmlrpc.execute("removeCollection", params);
-        assertTrue(b);
-
-        b = (Boolean) xmlrpc.execute("hasCollection", params);
-        assertFalse(b);
+        assertThat(xmlrpc.execute("hasCollection", params)).isEqualTo(TRUE);
+        assertThat(xmlrpc.execute("removeCollection", params)).isEqualTo(TRUE);
+        assertThat(xmlrpc.execute("hasCollection", params)).isEqualTo(FALSE);
     }
 
     @Test
     public void testRemoveDoc() throws XmlRpcException, MalformedURLException {
-        storeData();
-        XmlRpcClient xmlrpc = getClient();
+        final XmlRpcClient xmlrpc = storeData();
+
         List params = new ArrayList(1);
         params.add(TARGET_RESOURCE.toString());
-        Boolean b = (Boolean) xmlrpc.execute("hasDocument", params);
-
-        assertTrue(b);
-
-        b = (Boolean) xmlrpc.execute("remove", params);
-        assertTrue(b);
-
-        b = (Boolean) xmlrpc.execute("hasDocument", params);
-        assertFalse(b);
+        assertThat(xmlrpc.execute("hasDocument", params)).isEqualTo(TRUE);
+        assertThat(xmlrpc.execute("remove", params)).isEqualTo(TRUE);
+        assertThat(xmlrpc.execute("hasDocument", params)).isEqualTo(FALSE);
     }
 
     @Test
     public void testRetrieveDoc() throws XmlRpcException, MalformedURLException {
-        storeData();
+        final XmlRpcClient xmlrpc = storeData();
+
         Map<String, String> options = new HashMap<>();
         options.put("indent", "yes");
         options.put("encoding", StandardCharsets.UTF_8.name());
@@ -407,50 +409,56 @@ public class XmlRpcTest {
         params.add(options);
 
         // execute the call
-        XmlRpcClient xmlrpc = getClient();
-        byte[] data = (byte[]) xmlrpc.execute("getDocument", params);
+        assertThat(xmlrpc.execute("getDocument", params)).isInstanceOf(byte[].class);
 
         options.put("stylesheet", "test.xsl");
-        data = (byte[]) xmlrpc.execute("getDocument", params);
+        assertThat(xmlrpc.execute("getDocument", params)).isInstanceOf(byte[].class);
     }
 
     @Test
     public void testCharEncoding() throws XmlRpcException, MalformedURLException {
-        storeData();
+        final XmlRpcClient xmlrpc = storeData();
         List<Object> params = new ArrayList<>();
         String query = "distinct-values(//para)";
         params.add(query.getBytes(UTF_8));
-        params.add(new HashMap<>());
-        XmlRpcClient xmlrpc = getClient();
+        params.add(Map.of());
+
         HashMap<?, ?> result = (HashMap<?, ?>) xmlrpc.execute("queryP", params);
         Object[] resources = (Object[]) result.get("results");
         //TODO : check the number of resources before !
-        assertEquals(2, resources.length);
-        String value = (String) resources[0];
-        assertEquals("\u00E4\u00E4\u00F6\u00F6\u00FC\u00FC\u00C4\u00C4\u00D6\u00D6\u00DC\u00DC\u00DF\u00DF", value);
-        value = (String) resources[1];
-        assertEquals("\uC5F4\uB2E8\uACC4", value);
+        assertThat(resources).containsExactly(
+                "\u00E4\u00E4\u00F6\u00F6\u00FC\u00FC\u00C4\u00C4\u00D6\u00D6\u00DC\u00DC\u00DF\u00DF",
+                "\uC5F4\uB2E8\uACC4");
     }
 
     @Test
     public void testQuery() throws XmlRpcException, MalformedURLException {
-        storeData();
+        final XmlRpcClient xmlrpc = storeData();
+
         List<Object> params = new ArrayList<>();
-        String query
-                = "(::pragma exist:serialize indent=no::) //para";
+        String query = "(::pragma exist:serialize indent=no::) //para";
         params.add(query.getBytes(UTF_8));
         params.add(10);
         params.add(1);
-        params.add(new HashMap());
-        XmlRpcClient xmlrpc = getClient();
-        byte[] result = (byte[]) xmlrpc.execute("query", params);
-        assertNotNull(result);
-        assertTrue(result.length > 0);
+        params.add(Map.of(RpcAPI.PROTECTED_MODE, "/db"));
+
+        assertThat((byte[]) xmlrpc.execute("query", params)).isNotNull().isNotEmpty();
+    }
+
+    @Test
+    public void testQuerySummary() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add("//para");
+
+        assertThat((Map<String, Object>) xmlrpc.execute("querySummary", params)).isNotEmpty();
     }
 
     @Test
     public void testQueryWithStylesheet() throws XmlRpcException, MalformedURLException, SAXException, IOException {
-        storeData();
+        final XmlRpcClient xmlrpc = storeData();
+
         Map<String, String> options = new HashMap<>();
         options.put(EXistOutputKeys.STYLESHEET, "test.xsl");
         options.put(EXistOutputKeys.STYLESHEET_PARAM + ".testparam", "Test");
@@ -460,17 +468,16 @@ public class XmlRpcTest {
         String query = "//para[1]";
         params.add(query.getBytes(UTF_8));
         params.add(options);
-        XmlRpcClient xmlrpc = getClient();
+
         Integer handle = (Integer) xmlrpc.execute("executeQuery", params);
-        assertNotNull(handle);
+        assertThat(handle).isNotNull();
 
         params.clear();
         params.add(handle);
         params.add(0);
         params.add(options);
         byte[] item = (byte[]) xmlrpc.execute("retrieve", params);
-        assertNotNull(item);
-        assertTrue(item.length > 0);
+        assertThat(item).isNotNull().isNotEmpty();
         String out = new String(item, UTF_8);
 
         final Source expected = Input.fromString("<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<p>Test: \u00E4\u00E4\u00F6\u00F6\u00FC\u00FC\u00C4\u00C4\u00D6\u00D6\u00DC\u00DC\u00DF\u00DF</p>").build();
@@ -480,78 +487,147 @@ public class XmlRpcTest {
                 .withTest(actual)
                 .checkForSimilar()
                 .build();
-        assertFalse(diff.toString(), diff.hasDifferences());
+        assertThat(diff.hasDifferences()).withFailMessage(diff.toString()).isFalse();
     }
 
     @Test
     public void testCompile() throws XmlRpcException, MalformedURLException {
-        storeData();
+        final XmlRpcClient xmlrpc = storeData();
+
         List<Object> params = new ArrayList<>();
         String query = "<a>Invalid<a>";
         params.add(query.getBytes(UTF_8));
-        params.add(new HashMap<>());
-        XmlRpcClient xmlrpc = getClient();
+        params.add(Map.of());
+
         Map stats = (Map) xmlrpc.execute("compile", params);
-        assertNotNull(stats);
-        assertNotNull(stats.get("error"));
+        assertThat(stats).isNotNull();
+        assertThat(stats.get("error")).isNotNull();
     }
 
     @Test
-    public void testAddAccount() throws MalformedURLException, XmlRpcException {
-        String user = "rudi";
-        String passwd = "pass";
+    public void testAccount() throws MalformedURLException, XmlRpcException {
+        final String user = "rudi";
+        final String passwd = "pass";
         String simpleMd5 = MessageDigester.md5(passwd, true);
         String digest = MessageDigester.md5(user + ":exist:" + passwd, false);
+
         List<Object> params = new ArrayList<>(12);
-        params.add("rudi");
+        params.add(user);
         params.add(simpleMd5);
         params.add(digest);
         params.add(new String[]{"guest"});
         params.add(true);
         params.add(Permission.DEFAULT_UMASK);
-        params.add(new HashMap<>());
+        params.add(Map.of());
 
-        XmlRpcClient xmlrpc = getClient();
-        xmlrpc.execute("addAccount", params);
+        final XmlRpcClient xmlrpc = getClient();
+        assertThat(xmlrpc.execute("addAccount", params)).isEqualTo(TRUE);
+
+        params.clear();
+        params.add(user);
+        params.add(simpleMd5);
+        params.add(digest);
+        params.add(new String[]{"guest"});
+        assertThat(xmlrpc.execute("updateAccount", params)).isEqualTo(TRUE);
+
+        assertThat(xmlrpc.execute("setUserPrimaryGroup", List.of(user, "guest"))).isEqualTo(TRUE);
 
         XmlRpcClientConfigImpl config = (XmlRpcClientConfigImpl) xmlrpc.getClientConfig();
         config.setBasicUserName("admin");
         config.setBasicPassword("");
-        xmlrpc.execute("sync", Collections.EMPTY_LIST);
+        assertThat(xmlrpc.execute("sync", List.of())).isEqualTo(TRUE);
+
+        Object[] accounts = (Object[]) xmlrpc.execute("getAccounts", List.of());
+        assertThat(accounts).hasSize(5);
+
+        for (Object account : accounts) {
+            Map<String, Object> accountInfo = (Map<String, Object>) account;
+            assertThat(accountInfo).hasSize(9);
+            String name = (String) accountInfo.get("name");
+            assertThat((Map<String, Object>) xmlrpc.execute("getAccount", List.of(name)))
+                    .containsExactlyEntriesOf(accountInfo);
+        }
+
+        assertThat((Object[]) xmlrpc.execute("getGroupMembers", List.of("dba")))
+                .containsExactlyInAnyOrder("SYSTEM", "admin");
+        xmlrpc.execute("addAccountToGroup", List.of(user, "dba"));
+        assertThat((Object[]) xmlrpc.execute("getGroupMembers", List.of("dba")))
+                .containsExactlyInAnyOrder("SYSTEM", "admin", user);
+
+        assertThat((Object[]) xmlrpc.execute("getGroupMembers", List.of("nogroup")))
+                .containsExactlyInAnyOrder("nobody");
+
+        assertThat(xmlrpc.execute("updateAccount", List.of(user, List.of("nogroup")))).isEqualTo(TRUE);
+        assertThat((Object[]) xmlrpc.execute("getGroupMembers", List.of("nogroup")))
+                .containsExactlyInAnyOrder("nobody", user);
+
+        xmlrpc.execute("removeGroupMember", List.of("nogroup", user));
+        assertThat((Object[]) xmlrpc.execute("getGroupMembers", List.of("nogroup")))
+                .containsExactlyInAnyOrder("nobody");
+
+        assertThat(xmlrpc.execute("updateAccount", List.of(user, List.of("guest", "dba"), "dba"))).isEqualTo(TRUE);
+        assertThat((Object[]) xmlrpc.execute("getGroupMembers", List.of("dba")))
+                .containsExactlyInAnyOrder("SYSTEM", "admin");
+
+        assertThat(xmlrpc.execute("removeAccount", List.of(user))).isEqualTo(TRUE);
+    }
+
+    @Test
+    public void testGroups() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = getClient();
+
+        assertThat((Object[]) xmlrpc.execute("getGroups", List.of()))
+                .containsExactlyInAnyOrder("dba", "guest", "nogroup")
+                .allSatisfy(groupName -> {
+                    assertThat((Map<String, Object>) xmlrpc.execute("getGroup", List.of(groupName)))
+                            .hasSize(5).containsEntry("name", groupName);
+                });
+
+        assertThat(xmlrpc.execute("addGroup", List.of("testGroup", Map.of()))).isEqualTo(TRUE);
+        assertThat((Object[]) xmlrpc.execute("getGroups", List.of()))
+                .containsExactlyInAnyOrder("dba", "guest", "nogroup", "testGroup");
+
+        assertThat(xmlrpc.execute("updateGroup", List.of("testGroup", List.of("admin"), Map.of()))).isEqualTo(TRUE);
+
+        xmlrpc.execute("removeGroupManager", List.of("testGroup", "admin"));
+        xmlrpc.execute("addGroupManager", List.of("admin", "testGroup"));
+        xmlrpc.execute("removeGroup", List.of("testGroup"));
     }
 
     @Test
     public void testExecuteQuery() throws XmlRpcException, MalformedURLException {
-        storeData();
+        final XmlRpcClient xmlrpc = storeData();
+
         List<Object> params = new ArrayList<>();
         String query = "distinct-values(//para)";
         params.add(query.getBytes(UTF_8));
-        params.add(new HashMap<>());
-        XmlRpcClient xmlrpc = getClient();
+        params.add(Map.of());
+
         Integer handle = (Integer) xmlrpc.execute("executeQuery", params);
-        assertNotNull(handle);
+        assertThat(handle).isNotNull();
 
         params.clear();
         params.add(handle);
         Integer hits = (Integer) xmlrpc.execute("getHits", params);
-        assertNotNull(hits);
+        assertThat(hits).isNotNull();
 
-        assertEquals(2, hits.intValue());
+        assertThat(hits).isEqualTo(2);
 
         params.add(0);
         params.add(new HashMap());
-        byte[] item = (byte[]) xmlrpc.execute("retrieve", params);
+        assertThat(xmlrpc.execute("retrieve", params)).isInstanceOf(byte[].class);
 
         params.clear();
         params.add(handle);
         params.add(1);
         params.add(new HashMap());
-        item = (byte[]) xmlrpc.execute("retrieve", params);
+        assertThat(xmlrpc.execute("retrieve", params)).isInstanceOf(byte[].class);
     }
 
     @Test
     public void testQueryModuleExternalVar() throws XmlRpcException, MalformedURLException {
-        storeData();
+        final XmlRpcClient xmlrpc = storeData();
+
         List<Object> params = new ArrayList<>();
         params.add(QUERY_MODULE_DATA.getBytes(UTF_8));
 
@@ -569,31 +645,21 @@ public class XmlRpcTest {
 
         params.add(qp);
 
-        XmlRpcClient xmlrpc = getClient();
         Map<String, Object[]> result = (Map<String, Object[]>) xmlrpc.execute("queryP", params);
         Object[] resources = (Object[]) result.get("results");
-        assertEquals(2, resources.length);
-        String value = (String) resources[0];
-        assertEquals("imported-string-value", value);
-        value = (String) resources[1];
-        assertEquals("local-string-value", value);
+        assertThat(resources).containsExactly("imported-string-value", "local-string-value");
     }
 
     @Test
     public void testCollectionWithAccentsAndSpaces() throws XmlRpcException, MalformedURLException {
-        storeData();
-        List<Object> params = new ArrayList<>();
-        params.add(SPECIAL_COLLECTION.toString());
-        XmlRpcClient xmlrpc = getClient();
-        xmlrpc.execute("createCollection", params);
+        final XmlRpcClient xmlrpc = createCollection(SPECIAL_COLLECTION);
 
-        params.clear();
+        List<Object> params = new ArrayList<>();
         params.add(XML_DATA);
         params.add(SPECIAL_RESOURCE.toString());
         params.add(1);
 
-        Boolean result = (Boolean) xmlrpc.execute("parse", params);
-        assertTrue(result);
+        assertThat(xmlrpc.execute("parse", params)).isEqualTo(TRUE);
 
         params.clear();
         params.add(SPECIAL_COLLECTION.removeLastSegment().toString());
@@ -609,7 +675,7 @@ public class XmlRpcTest {
                 break;
             }
         }
-        assertTrue("added collection not found", foundMatch);
+        assertThat(foundMatch).withFailMessage("added collection not found").isTrue();
 
         Map<String, String> options = new HashMap<>();
         options.put("indent", "yes");
@@ -622,7 +688,331 @@ public class XmlRpcTest {
         params.add(options);
 
         // execute the call
-        byte[] data = (byte[]) xmlrpc.execute("getDocument", params);
+        assertThat(xmlrpc.execute("getDocument", params)).isInstanceOf(byte[].class);
+    }
+
+    @Test
+    public void testGetVersion() throws XmlRpcException, MalformedURLException {
+        XmlRpcClient xmlrpc = getClient();
+        assertThat(xmlrpc.execute("getVersion", List.of())).isEqualTo(Version.getVersion());
+    }
+
+    @Test
+    public void testConfigureCollection() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = createCollection(TARGET_COLLECTION);
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_COLLECTION.toString());
+        params.add("<configuration/>");
+        assertThat(xmlrpc.execute("configureCollection", params)).isEqualTo(TRUE);
+    }
+
+    @Test
+    public void testCreateId() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = createCollection(TARGET_COLLECTION);
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_COLLECTION.toString());
+        assertThat((String) xmlrpc.execute("createId", params)).endsWith(".xml");
+    }
+
+    @Test
+    public void testCreateResourceId() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = createCollection(TARGET_COLLECTION);
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_COLLECTION.toString());
+        assertThat((String) xmlrpc.execute("createResourceId", params)).endsWith(".xml");
+    }
+
+    @Test
+    public void testGetCollectionDesc() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_COLLECTION.toString());
+        Map<String, Object> response = (Map<String, Object>) xmlrpc.execute("getCollectionDesc", params);
+        assertThat(response).isNotEmpty();
+    }
+
+    @Test
+    public void testExistsAndCanOpenCollection() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_COLLECTION.toString());
+        assertThat(xmlrpc.execute("existsAndCanOpenCollection", params)).isEqualTo(TRUE);
+    }
+
+    @Test
+    public void testDescribeResource() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_RESOURCE.toString());
+        Map<String, Object> result = (Map<String, Object>) xmlrpc.execute("describeResource", params);
+        assertThat(result).isNotEmpty();
+    }
+
+    @Test
+    public void testGetContentDigest() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(MODULE_RESOURCE.toString());
+        params.add("SHA-256");
+        Map<String, Object> result = (Map<String, Object>) xmlrpc.execute("getContentDigest", params);
+        assertThat(result).isNotEmpty();
+    }
+
+    @Test
+    public void testDocumentListing() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        assertThat((Object[]) xmlrpc.execute("getDocumentListing", List.of())).isNotEmpty();
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_COLLECTION.toString());
+        assertThat((Object[]) xmlrpc.execute("getDocumentListing", params)).isNotEmpty();
+    }
+
+    @Test
+    public void testGetCollectionListing() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add("/db");
+        Object[] result = (Object[]) xmlrpc.execute("getCollectionListing", params);
+        assertThat(result).isNotEmpty();
+    }
+
+    @Test
+    public void testGetResourceCount() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_COLLECTION.toString());
+        assertThat((Integer) xmlrpc.execute("getResourceCount", params)).isEqualTo(3);
+    }
+
+    @Test
+    public void testPermissions() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_COLLECTION.toString());
+        assertThat((Map<String, Object>) xmlrpc.execute("getPermissions", params)).isNotEmpty();
+
+        params.clear();
+        params.add(TARGET_RESOURCE.toString());
+        assertThat((Map<String, Object>) xmlrpc.execute("getPermissions", params)).isNotEmpty();
+
+        params.clear();
+        params.add(TARGET_RESOURCE.toString());
+        params.add(755);
+        assertThat(xmlrpc.execute("setPermissions", params)).isEqualTo(TRUE);
+
+        params.clear();
+        params.add(TARGET_RESOURCE.toString());
+        params.add("rw-rw-rw-");
+        assertThat(xmlrpc.execute("setPermissions", params)).isEqualTo(TRUE);
+
+        params.clear();
+        params.add(TARGET_RESOURCE.toString());
+        params.add("admin");
+        params.add("dba");
+        params.add(755);
+        assertThat(xmlrpc.execute("setPermissions", params)).isEqualTo(TRUE);
+
+        params.clear();
+        params.add(TARGET_RESOURCE.toString());
+        params.add("admin");
+        params.add("dba");
+        params.add("rw-rw-rw-");
+        assertThat(xmlrpc.execute("setPermissions", params)).isEqualTo(TRUE);
+
+        params.clear();
+        params.add(TARGET_RESOURCE.toString());
+        params.add("admin");
+        params.add("dba");
+        params.add(755);
+        params.add(List.of());
+        assertThat(xmlrpc.execute("setPermissions", params)).isEqualTo(TRUE);
+    }
+
+    @Test
+    public void testChgrp() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(MODULE_RESOURCE.toString());
+        params.add("guest");
+        assertThat(xmlrpc.execute("chgrp", params)).isEqualTo(TRUE);
+    }
+
+    @Test
+    public void testChown() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(MODULE_RESOURCE.toString());
+        params.add("anoymous");
+        assertThat(xmlrpc.execute("chown", params)).isEqualTo(TRUE);
+
+        params.add("guest");
+        assertThat(xmlrpc.execute("chown", params)).isEqualTo(TRUE);
+    }
+
+    @Test
+    public void testGetBinaryResource() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(MODULE_RESOURCE.toString());
+        assertThat((byte[]) xmlrpc.execute("getBinaryResource", params)).isNotEmpty();
+    }
+
+    @Test
+    public void testListDocumentPermissions() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_COLLECTION.toString());
+        assertThat((Map<String, List>) xmlrpc.execute("listDocumentPermissions", params)).isNotEmpty();
+    }
+
+    @Test
+    public void testListCollectionPermissions() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add("/db");
+        assertThat((Map<String, List>) xmlrpc.execute("listCollectionPermissions", params)).isNotEmpty();
+    }
+
+    @Test
+    public void testGetSubCollectionPermissions() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add("/db");
+        params.add("xmlrpc");
+        assertThat((Map<String, List>) xmlrpc.execute("getSubCollectionPermissions", params)).isNotEmpty();
+    }
+
+    @Test
+    public void testGetSubCollectionCreationTime() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add("/db");
+        params.add("xmlrpc");
+        assertThat((Long)xmlrpc.execute("getSubCollectionCreationTime", params)).isGreaterThan(0);
+    }
+
+    @Test
+    public void testGetSubResourcePermissions() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_COLLECTION.toString());
+        params.add(TEST_XML_URI.toString());
+        assertThat((Map<String, List>) xmlrpc.execute("getSubResourcePermissions", params)).isNotEmpty();
+    }
+
+    @Test
+    public void testGetCreationDate() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_COLLECTION.toString());
+        assertThat((Date) xmlrpc.execute("getCreationDate", params)).isNotNull();
+    }
+
+    @Test
+    public void testGetTimestamps() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(TARGET_RESOURCE.toString());
+        assertThat((Object[]) xmlrpc.execute("getTimestamps", params)).isNotEmpty();
+    }
+
+    @Test
+    public void testPrintDiagnostics() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add(QUERY_MODULE_DATA);
+        params.add(Map.of());
+        assertThat((String) xmlrpc.execute("printDiagnostics", params))
+                .contains("$tm:imported-external-string, $tm-query:local-external-string");
+    }
+
+    @Test
+    public void testQueryP() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add("//test");
+        params.add(TARGET_RESOURCE.toString());
+        params.add("1");
+        params.add(Map.of());
+        assertThat((Map<String, Object>) xmlrpc.execute("queryP", params)).isNotEmpty();
+
+        params.set(0, "//test".getBytes());
+        assertThat((Map<String, Object>) xmlrpc.execute("queryP", params)).isNotEmpty();
+    }
+
+    @Test
+    public void testQueryPT() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        List<Object> params = new ArrayList<>();
+        params.add("//test".getBytes());
+        params.add(Map.of());
+        assertThat((Map<String, Object>) xmlrpc.execute("queryPT", params)).isNotEmpty();
+
+        params.clear();
+        params.add("//test".getBytes());
+        params.add(TARGET_RESOURCE.toString());
+        params.add("1");
+        params.add(Map.of());
+        assertThat((Map<String, Object>) xmlrpc.execute("queryPT", params)).isNotEmpty();
+    }
+
+    @Test
+    public void testLockUnlockResources() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        assertThat(xmlrpc.execute("hasUserLock", List.of(TARGET_RESOURCE.toString()))).isEqualTo("");
+        assertThat(xmlrpc.execute("lockResource", List.of(TARGET_RESOURCE.toString(), "admin"))).isEqualTo(TRUE);
+        assertThat(xmlrpc.execute("hasUserLock", List.of(TARGET_RESOURCE.toString()))).isEqualTo("admin");
+        assertThat(xmlrpc.execute("unlockResource", List.of(TARGET_RESOURCE.toString()))).isEqualTo(TRUE);
+        assertThat(xmlrpc.execute("hasUserLock", List.of(TARGET_RESOURCE.toString()))).isEqualTo("");
+    }
+
+    @Test
+    public void testIndexedElements() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        assertThat((Object[])xmlrpc.execute("getIndexedElements", List.of(TARGET_COLLECTION.toString(), true))).isEmpty();
+        assertThat(xmlrpc.execute("reindexCollection", List.of(TARGET_COLLECTION.toString()))).isEqualTo(TRUE);
+        assertThat(xmlrpc.execute("reindexDocument", List.of(TARGET_RESOURCE.toString()))).isEqualTo(TRUE);
+    }
+
+    @Test
+    public void testLastModified() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        assertThat(xmlrpc.execute("setLastModified", List.of(TARGET_RESOURCE.toString(), 5000L))).isEqualTo(TRUE);
+    }
+
+    @Test
+    public void testGetDocType() throws XmlRpcException, MalformedURLException {
+        final XmlRpcClient xmlrpc = storeData();
+
+        assertThat((Object[])xmlrpc.execute("getDocType", List.of(TARGET_RESOURCE.toString()))).isNotEmpty();
     }
 
     private String generateXml(final int minBytes) {
